# sdlTossup

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
info/: extractOutlines.py  notes.md
src/: GameSounds.h  GameState.cpp  GameState.h  LCDElements.cpp  LCDElements.h  LcdELement.cpp  LcdElement.cpp  LcdElement.h  Outlines.cpp  Outlines.h  Path.cpp  Path.h  Point.h  RpiGpio.cpp  RpiGpio.h  main.cpp
